# VWCPPUnit

./: .gitignore
FirstDemo/: CMakeLists.txt  FirstDemo.sln
FirstDemo/Debug/: FirstDemo.ilk  FirstDemoTest.exe.gta.testdurations  FirstDemoTest.ilk
FirstDemo/FirstDemo/: FirstDemo.cpp  FirstDemo.vcxproj  FirstDemo.vcxproj.filters  stack.cpp  stack.h  stack_exception.h
FirstDemo/FirstDemo/Debug/: FirstDemo.exe.recipe  vc142.idb
FirstDemo/FirstDemo/Debug/FirstDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FirstDemo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FirstDemo/FirstDemoTest/: FirstDemoTest.vcxproj  test.cpp
FirstDemo/FirstDemoTest/Debug/: FirstDemoTest.exe.recipe  FirstDemoTest.vcxproj.FileListAbsolute.txt
FirstDemo/FirstDemoTest/Debug/FirstDemoTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FirstDemoTest.read.1u.tlog  FirstDemoTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SimpleMockDemoProjekt/: CMakeLists.txt
SimpleMockDemoProjekt/include/: Actor.h  ActorImpl.h  Aktor.h  AktorImpl.h  MeinServiceUsesAktor.h  MyServiceUsesActor.h
SimpleMockDemoProjekt/src/: CMakeCache.txt  MeinServiceUsesAktor.cpp  MyServiceUsesActor.cpp
SimpleMockDemoProjekt/test/: CMakeLists.txt  MeinServiceUsesAktor_test.h  MockActor.h  MockAktor.h  MyServiceUsesActor_test.h  test.cpp
TiereProjekt/: CMakeLists.txt
TiereProjekt/include/: schwein.h
TiereProjekt/src/: schwein.cpp
TiereProjekt/test/: schwein_test.h  test.cpp
